--- a/styles/main.css
+++ b/styles/main.css
@@ -67,14 +67,15 @@ h1 {
   .mobile-nav__call {
     position: relative; }
   .mobile-nav__link-call {
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    position: relative; }
     .mobile-nav__link-call::after {
       content: "";
       position: absolute;
       bottom: -8px;
       left: 0;
       height: 1px;
-      width: 19%;
+      width: 100%;
       background-color: #fff; }
 
 .hamburger-mobile {
@@ -95,7 +96,18 @@ h1 {
   font-size: 12px; }
   .header__wrapper {
     max-width: 1260px;
-    margin: 0 auto; }
+    margin: 0 auto;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
   .header__nav {
     letter-spacing: 2px;
     margin-bottom: 38px; }
@@ -125,26 +137,26 @@ h1 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-bottom: 550px;
   letter-spacing: 2px; }
   .top-header__item:nth-child(2), .top-header__item:nth-child(4) {
     display: none; }
   .top-header__link {
+    display: inline-block;
     color: white;
     text-decoration: none;
     text-transform: uppercase;
-    -webkit-transition: color 0.2s;
-    transition: color 0.2s; }
-    .top-header__link:hover {
-      color: #9fadc2; }
-    .top-header__link_active::after {
-      content: "";
+    position: relative; }
+    .top-header__link::after {
       position: absolute;
-      bottom: 0;
-      left: 0;
+      content: "";
+      display: block;
+      width: 0;
       height: 1px;
-      width: 100%;
-      background-color: #fff; }
+      background: #fff;
+      -webkit-transition: width 0.3s;
+      transition: width 0.3s; }
+    .top-header__link:hover::after {
+      width: 100%; }
 
 .hamburger-block {
   position: absolute;
@@ -203,7 +215,20 @@ h1 {
     font-size: 48px;
     margin: 0; }
   .about__link {
-    color: #0075ff; }
+    display: inline-block;
+    color: #0075ff;
+    position: relative; }
+    .about__link::after {
+      position: absolute;
+      content: "";
+      display: block;
+      width: 0;
+      height: 2px;
+      background: #0075ff;
+      -webkit-transition: width 0.3s;
+      transition: width 0.3s; }
+    .about__link:hover::after {
+      width: 100%; }
 
 .info__title {
   color: #0075ff;
@@ -247,8 +272,21 @@ h1 {
       -webkit-transform: translateX(-50%);
               transform: translateX(-50%); }
   .gallery__link {
+    display: inline-block;
     color: #0075ff;
-    font-weight: bold; }
+    font-weight: bold;
+    position: relative; }
+    .gallery__link::after {
+      position: absolute;
+      content: "";
+      display: block;
+      width: 0;
+      height: 1px;
+      background: #0075ff;
+      -webkit-transition: width 0.3s;
+      transition: width 0.3s; }
+    .gallery__link:hover::after {
+      width: 100%; }
   .gallery__photos {
     display: grid;
     -webkit-column-gap: 20px;
@@ -266,7 +304,16 @@ h1 {
     width: 100%;
     border-radius: 8px;
     -o-object-fit: cover;
-       object-fit: cover; }
+       object-fit: cover;
+    cursor: -webkit-zoom-in;
+    cursor: zoom-in;
+    -webkit-transition: -webkit-transform 0.3s;
+    transition: -webkit-transform 0.3s;
+    transition: transform 0.3s;
+    transition: transform 0.3s, -webkit-transform 0.3s; }
+    .gallery__img:hover {
+      -webkit-transform: scale(1.01);
+              transform: scale(1.01); }
   .gallery__city-name {
     margin: 0 0 40px; }
   .gallery__btn {
@@ -285,7 +332,9 @@ h1 {
     font-weight: bold;
     color: #0075ff;
     background-color: #fff;
-    cursor: pointer; }
+    cursor: pointer;
+    -webkit-transition: all, 0.3s ease-in-out;
+    transition: all, 0.3s ease-in-out; }
     .gallery__btn:hover {
       color: #fff;
       background-color: #0075ff; }
@@ -376,7 +425,9 @@ h1 {
             box-shadow: 0 6px 23px rgba(0, 117, 255, 0.46);
     background: #0075ff;
     margin-top: 32px;
-    cursor: pointer; }
+    cursor: pointer;
+    -webkit-transition: all, 0.3s ease-in;
+    transition: all, 0.3s ease-in; }
     .consultation-form__btn:hover {
       color: #0075ff;
       background: #fff;
@@ -420,9 +471,33 @@ h1 {
       -ms-flex-pack: justify;
           justify-content: space-between; }
   .testimonails-block__card {
-    width: 240px;
-    text-align: center; }
+    max-width: 240px;
+    text-align: center;
+    padding-top: 15px;
+    cursor: pointer;
+    position: relative; }
+    .testimonails-block__card::after {
+      top: 0;
+      content: "";
+      position: absolute;
+      left: 50%;
+      -webkit-transform: translateX(-50%);
+              transform: translateX(-50%);
+      right: 0;
+      bottom: -500px;
+      width: 0;
+      height: 0;
+      background-color: rgba(182, 215, 255, 0.2);
+      border-radius: 30px;
+      z-index: -1;
+      -webkit-transition: width 0.4s, height 0.4s;
+      transition: width 0.4s, height 0.4s; }
+    .testimonails-block__card:hover::after {
+      width: 110%;
+      height: 110%; }
   .testimonails-block__photo {
+    width: 150px;
+    border-radius: 75px;
     margin-bottom: 28px; }
   .testimonails-block__name {
     font-size: 24px;
@@ -560,6 +635,10 @@ h1 {
       -webkit-box-shadow: none;
               box-shadow: none; }
 
+@media (max-width: 850px) and (min-width: 700px) {
+  .contact-info__item {
+    margin-right: 10px; } }
+
 @media screen and (max-width: 700px) {
   .contact {
     margin-bottom: 64px; }
@@ -613,8 +692,8 @@ ul {
   margin: 0 auto;
   color: #000; }
 
-@media screen and (max-width: 700px) {
+@media (max-width: 1300px) {
   .main-wrapper {
-    margin: 0 20px; } }
+    padding: 0 20px; } }
 
 /*# sourceMappingURL=main.css.map */
